项目管理/v008/REVIEW_LOG.md
# 项目审查日志 (REVIEW LOG) — 当前版本

> 原则：每次追加，永不删除。保留完整决策链。
>
> 完整历史版本：见 项目管理/v001/、项目管理/v002/、项目管理/v003/、项目管理/v004/。
> 项目管理/LATEST.txt 指向最新稳定版本。
>
> 本文件仅保留最近一次审查的结果摘要。详细审查记录请查阅版本文件夹。

---

## 接收摘要 / 当前状态（最新 AI --- 2026-07-15 Codex）

> 这是当前项目的**一键交接摘要**。下一位 AI 读完这段就能直接开始工作。

### 项目名称
键盘自动化序列播放器（MyAutoPlayer），用于游戏连招宏的按键序列自动执行工具。

### 当前版本
v004（见项目管理/v004/）

### 当前进度

| 阶段 | 进度 |
|------|------|
| 阶段0：环境初始化 | 100% |
| 阶段0.5：学习优秀案例 | 100% |
| 阶段1.0：安全机制 | 100% |
| 阶段1：Hello World 验证 | 100%（用户实测通过） |
| 屏幕提示文本功能 | 0%（需求已记录，等待实现） |
| 音效功能 | 0%（需求已记录，后续实现） |
| 阶段2：序列播放器 | 0%（下一个要做的代码任务） |
| 阶段3：脚本引擎 | 0% |
| 阶段4：热键管理完善 | 0% |
| 阶段5：主 UI 界面 | 0% |
| 阶段6-8 | 0% |

### 上一个 AI 做了什么（Codex）
1. 整理了屏幕提示文本需求（参考 Quickinput Pops 系统）
2. 整理了音效功能参考（Quickinput 的 5 个音效文件 + 12 种事件绑定）
3. 用 Hello World 贯穿法设计了阶段测试计划
4. 创建了防幻觉机制文档（7 条核心规则）
5. 创建了当前状态与交接指南
6. 更新了 PROJECT_OUTLINE.md、REVIEW_LOG.md、PROJECT_TASKS.md
7. 更新了项目信心需求文档.md（加入优秀案例问题解决原则）

### 测试结果
用户手动测试阶段1.0 Hello World 全部通过：
- F12 启动禁用：全部通过
- F9 在记事本中打出 Hello World：成功
- F12 禁用后 F9 不触发：正确
- 窗口顶部红色/绿色标签：正常

### 下一个 AI 需要做什么
1. 先读 docs/当前状态与交接指南.md 了解全局
2. 考虑开始实现屏幕提示文本功能（OSD 浮层窗口）
3. 或者继续阶段2：创建 src/core/sequence_player.py
4. 完成后创建 v005 快照

### 注意事项
- 用户是小白，不写代码，只负责手动测试
- 日志文件在 logs/app.log，AI 务必通过日志排查问题
- 当前代码全部在 my-automation-tool/ 中
- 遇到问题先查优秀案例1 和 优秀案例2 的源码

---

## 审查 #4 | 2026-07-15 | 操作者：Codex

### 审查范围
- 需求文档完整性和规范性审查
- 防幻觉机制审查
- 阶段测试计划审查

### 本次完成内容

**文档体系完善 — 5 个新文件 + 4 个更新文件：**

| 文件 | 操作 | 说明 |
|------|------|------|
| docs/当前状态与交接指南.md | 新建 | AI 交接指南，包含完成/未完成清单 |
| docs/需求更新-屏幕提示文本.md | 新建 | 屏幕 OSD 提示功能完整规格 |
| docs/需求更新-音效功能参考.md | 新建 | Quickinput 音效系统的分析记录 |
| docs/阶段测试计划.md | 新建 | 用 Hello World 贯穿所有阶段的测试方法 |
| docs/防幻觉机制.md | 新建 | 7 条防幻觉核心规则 |
| PROJECT_OUTLINE.md | 更新 | 新增进度条目、文件索引 |
| REVIEW_LOG.md | 追加 | 本审查记录 |
| PROJECT_TASKS.md | 更新 | 新增屏幕提示文本阶段任务 |
| 项目信心需求文档.md | 更新 | 新增第六章：优秀案例问题解决原则 |

### 关键发现

1. **Quickinput 的 Pops 系统是屏幕提示的最佳参考**
   - 12 种事件类型各自可配文本+音效+颜色
   - Qi::popText 全局 Overlay 窗口，支持 Show/Hide/Popup
   - 位置(X,Y)、大小、显示时长可调

2. **Quickinput 的音效系统**
   - 5 个音效文件：notify/on/off/run/stop
   - 通过 QiFn::SoundPlay 异步播放
   - 与提示文本共享相同的触发时机

3. **Hello World 贯穿测试法**
   - 每个阶段的进度通过"能否用该阶段的新功能正确打出 Hello World"来验证
   - 测试方法直观，小白用户也能轻松验证

### 本次修改的文件

| 文件 | 操作 | 说明 |
|------|------|------|
| docs/当前状态与交接指南.md | 新建 | AI 交接用 |
| docs/需求更新-屏幕提示文本.md | 新建 | 屏幕提示需求规格 |
| docs/需求更新-音效功能参考.md | 新建 | 音效参考 |
| docs/阶段测试计划.md | 新建 | 各阶段测试方法 |
| docs/防幻觉机制.md | 新建 | 防幻觉规则 |
| 项目信心需求文档.md | 更新 | 新增第六章 |
| PROJECT_OUTLINE.md | 更新 | 进度同步 |
| PROJECT_TASKS.md | 更新 | 新增阶段 |
| REVIEW_LOG.md | 追加 | 本记录 |

### 下一步行动
1. 可开始实现屏幕提示文本功能
2. 或继续阶段2：创建 sequence_player.py


---

## 审查 #5 | 2026-07-15 | 操作者：Codex

### 审查范围
- 乱码问题排查与修复
- 项目文档体系重建（v005）
- 需求文档新增章节（用户画像 + AI 交接推测规则）

### 本次完成内容

**一、乱码问题排查与修复**
- 根因：PowerShell 的 Set-Content 未指定 -Encoding UTF8，导致 UTF-8 中文被系统默认编码（GBK）解读，产生乱码
- 修复方案：改用 Python 的 open(path, 'w', encoding='utf-8') 重建所有中文文件
- 回滚到 v004 版本后重做，所有文件编码正确

**二、文件重命名（英文命名原则）**
- 根目录：PROJECT_OUTLINE.md（英文）、REVIEW_LOG.md（英文）、项目信心需求文档.md（中文，用户保留）
- my-automation-tool/docs/：全部改为英文命名
- REQUIREMENT_EVOLUTION/：需求演进文件夹改为英文名

**三、内链更新**
- 更新了所有文件中指向旧中文名的引用路径（约 20+ 处）
- 全部统一为当前英文文件名

**四、需求文档新增内容**
- 在 项目信心需求文档.md 中新增「用户画像」章节（记录用户英语水平为高中水平）
- 在 项目信心需求文档.md 中新增「AI 交接推测规则」章节（第九条）

### 本次修改的文件清单

| 文件 | 操作 | 说明 |
|------|------|------|
| 项目信心需求文档.md | 内容新增 | 新增用户画像 + AI 交接推测规则 |
| PROJECT_OUTLINE.md | 更新 | 版本升级到 v005，进度更新 |
| REVIEW_LOG.md | 追加 | 本审查记录 |
| my-automation-tool/docs/*.md | 重命名 | 8 个文件改为英文名 |
| 全局文件引用 | 修复 | 20+ 处引用路径修正 |


## ▼ 给下一个 AI 的提示词（从这里复制）

> 以下内容可直接复制粘贴给下一个 AI。它不需要当前对话的上下文就能直接开始工作。

---

### 项目名称
MyAutoPlayer（键盘自动化序列播放器）— 游戏连招宏的按键序列自动执行工具

### 当前进度（v005）

| 阶段 | 进度 | 说明 |
|------|------|------|
| 阶段0：环境初始化 | 100% | 骨架目录、文档、日志、配置 |
| 阶段0.5：学习优秀案例 | 100% | 已提取 Quickinput + ok-ww 设计模式 |
| 阶段1.0：安全机制 | 100% | 启动即禁用 + 全局启用键 + 退出双重清理 |
| 阶段1：Hello World 验证 | 100% | F12 启用后 F9 打出 Hello World，用户实测通过 |
| 文档体系重建（v005） | 100% | 乱码修复、文件英文命名、内链更新、需求章节新增 |
| 屏幕提示文本功能 | 0% | **← 你要做的第一个任务** |
| 音效功能 | 0% | 未来阶段 |
| 阶段2：序列播放器 | 0% | 等待开始 |
| 阶段3+ | 0% | 等待开始 |

### 上一个 AI（Codex）做了什么
1. 排查并修复了 PowerShell 编码导致的乱码问题
2. 将所有文档文件名改为英文，恢复项目文档体系
3. 在 项目信心需求文档.md 中新增「用户画像」和「AI 交接推测规则」章节

### 下一个 AI 需要实现的任务（按优先级）

**优先级 1：实现屏幕提示文本功能（OSD 浮层窗口）**

需求文档：my-automation-tool/docs/OSD_POPUP_REQUIREMENT.md

子任务清单：
| # | 任务 | 文件 |
|---|------|------|
| 1 | 创建 OSD 浮层窗口类 | src/ui/osd_window.py |
| 2 | 实现 show_notification / hide_notification | src/ui/osd_window.py |
| 3 | 实现自动淡出（QTimer + 透明度动画） | src/ui/osd_window.py |
| 4 | settings.json 增加提示文本配置项 | config/settings.json |
| 5 | 热键回调中调用 OSD 显示 | main.py |
| 6 | 设置开关 | config/settings.json |
| 7 | 手动测试验证 | 按 STAGE_TEST_PLAN.md 测试 |

**关键技术参考（优秀案例1-Quickinput）：**
- 查看 Quickinput-main/source/src/tools/QiFunc.h 中的 popText 全局 Overlay 窗口
- 查看 Quickinput-main/source/ui/PopsUi.cpp 中的事件绑定和文本显示逻辑
- 使用 PySide6：Qt.FramelessWindowHint + Qt.WindowStaysOnTopHint + Qt.WA_TranslucentBackground

### 重要注意事项
- 用户是小白，英语水平高中，不写代码，只负责手动测试
- 日志文件在 my-automation-tool/logs/app.log，用日志排查问题
- 遇到问题先查 优秀案例1-Quickinput/ 和 优秀案例2-okww/ 的源码
- 一次最多做 3 个子任务（规则来自 ANTI_HALLUCINATION.md）
- 写文件时用 Python 的 open(path, 'w', encoding='utf-8')，**不要用 PowerShell 的 Set-Content**
- 所有文件使用英文命名，不要用中文文件名
- 完成所有任务后，拷贝 PROJECT_OUTLINE.md 和 REVIEW_LOG.md 到 项目管理/v006/，更新 LATEST.txt


---

## 审查 #6 | 2026-07-15 | 操作者：Codex

### 审查范围
- 初始化本地 Git 仓库
- 创建 GitHub 远程仓库
- V1 分支创建（阶段1快照）
- 提取 STAGE_TEST_PLAN.md 到根目录
- 更新文档（GitHub信息+AI信心自检规则）

### 完成内容
| 文件 | 操作 |
|------|------|
| .gitignore | 新建 |
| 项目信心需求文档.md | 新增 GitHub+AI信心章节 |
| PROJECT_OUTLINE.md | 新增 GitHub 和文件索引 |
| STAGE_TEST_PLAN.md | 复制到根目录 |
| Git 仓库 | master+V1 已本地创建 |
| 项目管理/v006/ | 当前版本快照 |

### 关键发现
1. GitHub 在当前网络不可达（连接超时），无法远程推送
2. Token 认证通过，纯属网络屏蔽问题
3. 代码已安全保存在本地 Git 仓库

### 给下一个AI
1. 读完所有文档后自检（第十一条规则）
2. 实现屏幕提示文本功能（OSD浮层）：my-automation-tool/docs/OSD_POPUP_REQUIREMENT.md
3. 一次最多做3个子任务

### GitHub 推送
网络恢复后运行：
```
git push -u origin master --force
git push -u origin V1 --force
```

---

## ?? #7 | 2026-07-15 | ????Codex

### ????
- ???????????OSD?????
- ?????AI???????
- GitHub???master+V1??????

### ??????

**???????? ? 3?????**

| ?? | ?? | ?? |
|------|------|------|
| src/ui/osd_window.py | ?? | OSD?????????/??/??/???? |
| config/settings.json | ?? | ??popup_enabled?6?OSD?? |
| main.py | ?? | ??OsdPopup?F9????show_notification |

**???**
- ???_push_to_github.bat???AI?GitHub??????????

**GitHub???**
- master?? → ????
- V1?????1???→ ????

### ????
1. OSD??QPropertyAnimation(windowOpacity)????
2. ??QGraphicsDropShadowEffect?????
3. ????Qt.Tool?????????
4. OsdPopup???settings.json?????????????

### ???????

| ?? | ?? | ?? |
|------|------|------|
| my-automation-tool/src/ui/osd_window.py | ?? | OSD???? |
| my-automation-tool/config/settings.json | ?? | ??OSD?? |
| my-automation-tool/main.py | ?? | ??OSD?? |
| _push_to_github.bat | ?? | ??AI??????? |
| PROJECT_OUTLINE.md | ?? | ???? |
| PROJECT_TASKS.md | ?? | ??OSD????? |
| REVIEW_LOG.md | ?? | ????? |

### ?????
1. **??????OSD??**??STAGE_TEST_PLAN.md???
2. ??????????
3. ??2???src/core/sequence_player.py???????

### ????
- OSD????????settings.json?popup_enabled??
- ??????2??????
- ???F9??Hello World??OSD??????

---

## 审查 #8 | 2026-07-15 | 操作者：Codex

### 审查范围
- 拆分 STAGE_TEST_PLAN.md 防止 AI 幻觉
- 创建 SETUP_GUIDE.md 环境配置说明
- 更新防幻觉机制和项目信心需求文档

### 本次完成内容

**一、测试计划拆分（docs/test-plans/）**
旧的 STAGE_TEST_PLAN.md 太长（一文件含所有阶段），拆分为 3 个文件：

| 文件 | 内容 | 路径 |
|------|------|------|
| STAGE_1-2.md | 阶段1(HellowWorld) + 阶段1.5(OSD) + 阶段2(脚本管理) | docs/test-plans/ |
| STAGE_3-4.md | 阶段3(UI编辑器) + 阶段4(窗口匹配/音效) | docs/test-plans/ |
| STAGE_5+.md | 阶段5(优化) + 未来阶段(可追加) | docs/test-plans/ |
| STAGE_TEST_PLAN.md | 总索引（引向各文件） | 根目录 |

**二、SETUP_GUIDE.md 环境配置说明**
新建文件放在根目录，包含：
- Python 安装 + 虚拟环境 + 依赖安装 + 运行步骤
- 常见问题解答
- 给接手 AI 的自检提示

**三、防幻觉文档更新**
- ANTI_HALLUCINATION.md 新增规则八：文件拆分防幻觉
- 项目信心需求文档.md 新增第十二章：文件拆分防幻觉策略

**四、阶段结构重构**
根据用户需求，结合 Quickinput 的优秀案例分析，重新规划了阶段：
- 阶段1：Hello World + 安全机制（已完成）
- 阶段1.5：OSD 屏幕提示（已完成，待测试）
- 阶段2：脚本管理系统（热键绑定+触发模式+执行次数+速度倍率）
- 阶段3：热键绑定 UI + 脚本编辑器
- 阶段4：窗口匹配 + 音效/定时
- 阶段5+：多脚本并发、持久化、综合测试

### 本次修改的文件

| 文件 | 操作 | 说明 |
|------|------|------|
| docs/test-plans/STAGE_1-2.md | 新建 | 阶段1-2 测试计划 |
| docs/test-plans/STAGE_3-4.md | 新建 | 阶段3-4 测试计划 |
| docs/test-plans/STAGE_5+.md | 新建 | 阶段5+ 测试计划（可追加）|
| STAGE_TEST_PLAN.md | 重写 | 改为总索引 |
| SETUP_GUIDE.md | 新建 | 环境配置说明 |
| docs/ANTI_HALLUCINATION.md | 更新 | 新增规则八 |
| 项目信心需求文档.md | 更新 | 新增第十二章 |
| PROJECT_OUTLINE.md | 更新 | 进度同步，阶段重构 |
| REVIEW_LOG.md | 追加 | 本审查记录 |

### 下一步行动
1. **用户测试 OSD 功能**（按 STAGE_1-2.md 的阶段1.5测试清单）
2. 测试通过后，开始阶段2：脚本管理系统
